<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10sp"
        android:paddingHorizontal="16sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Learn Together"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginBottom="20dp"
            android:text="Connect, collaborate, and stay motivated with peers through discussions, chats, and friendly study challenges."
            />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/forum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:background="@color/white"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/forum"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="Forum Discussions"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/since"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/textcolor"
                    android:text="@string/forum_description"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buddy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:background="@color/white"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/buddy"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="Study Buddies"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/textcolor"
                    android:text="@string/sbuddy_description"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_box"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:background="@color/white"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/chats"
                    android:layout_marginVertical="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="Chats"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/textcolor"
                    android:text="@string/chats_description"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>

</ScrollView>

